<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.rainvisitor.project_httptest.MainActivity">
    <ImageView
        android:contentDescription="@null"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:src="@drawable/image_login"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_welcome" />
    <EditText
        android:id="@+id/edit_account"
        android:hint="@string/hint_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        />
    <EditText
        android:id="@+id/edit_pwd"
        android:hint="@string/hint_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8sp"
        android:gravity="center_horizontal">
        <CheckBox
            android:id="@+id/chk_remember"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:text="@string/chk_remember"/>
        <CheckBox
            android:id="@+id/chk_keep_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:text="@string/chk_keep_login"/>
    </LinearLayout>
    <Button
        android:text="@string/btn_login_text"
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="checkLogin"
        />
</LinearLayout>
